WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243270
WKWebView's scrollView.bounces=false is not working
https://bugs.webkit.org/show_bug.cgi?id=243270
Summary
WKWebView's scrollView.bounces=false is not working
Nikos Mouchtaris
Reported
2022-07-27 15:19:56 PDT
WKWebView's scrollView.bounces=false is not working
Attachments
Add attachment
proposed patch, testcase, etc.
Nikos Mouchtaris
Comment 1
2022-07-27 15:24:05 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2794
Radar WebKit Bug Importer
Comment 2
2022-08-03 15:20:21 PDT
<
rdar://problem/98079079
>
EWS
Comment 3
2022-09-16 21:09:02 PDT
Committed
254582@main
(b40f80bcf189): <
https://commits.webkit.org/254582@main
> Reviewed commits have been landed. Closing PR #2794 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug