WKWebView's scrollView.bounces=false is not working https://bugs.webkit.org/show_bug.cgi?id=243270 <rdar://96024524>

Reviewed by Simon Fraser.

Keep track if bounces is set by client to make sure it is not overwritten by overscroll behavior.
Currently setting bounces = True on a page with overscroll-behavior:none will result in the client
setting to be ignored.

* Source/WebKit/UIProcess/RemoteLayerTree/ios/ScrollingTreeScrollingNodeDelegateIOS.mm:
(WebKit::ScrollingTreeScrollingNodeDelegateIOS::updateScrollViewForOverscrollBehavior):

Canonical link: https://commits.webkit.org/254582@main