Source/WebKit/UIProcess/API/ios/WKWebViewIOS.mm
@@ -908,7 +908,7 @@ static void changeContentOffsetBoundedInValidRange(UIScrollView *scrollView, Web
         horizontalOverscrollBehavior = rootNode->horizontalOverscrollBehavior();
         verticalOverscrollBehavior = rootNode->verticalOverscrollBehavior();
     }
-
+    
     WebKit::ScrollingTreeScrollingNodeDelegateIOS::updateScrollViewForOverscrollBehavior(_scrollView.get(), horizontalOverscrollBehavior, verticalOverscrollBehavior, WebKit::ScrollingTreeScrollingNodeDelegateIOS::AllowOverscrollToPreventScrollPropagation::No);
 
     bool hasDockedInputView = !CGRectIsEmpty(_inputViewBoundsInWindow);
